syntax = "proto3";

package testdata.validate;
option go_package = "github.com/nlachfr/protoc-gen-cel-validate/testdata/validate";

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "validate/validate.proto";

message Field {
    option (google.api.resource) = {
        type: "testdata.validate/Field"
        pattern: "fields/{field}"
        singular: "field"
    };
    string name = 1;
}

message FieldExpr {
    string name = 1 [(cel.validate.field).rule = {
        programs: {
            expr: 'name != "name"'
        }
    }];
}

message FieldsExpr {
    string name = 1 [(cel.validate.field).rule = {
        programs: {
            expr: 'name != "name"'
        }
    }];
    string display_name = 2 [(cel.validate.field).rule = {
        programs: {
            expr: 'display_name != name'
        }
    }];
}

message FieldRequired {
    string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message FieldReferenceWrong {
    string name = 1 [
        (google.api.resource_reference).type = "testdata.validate/Fild"
    ];
}

message FieldReferenceType {
    string name = 1 [
        (google.api.resource_reference).type = "testdata.validate/Field"
    ];
}

message FieldReferenceChild {
    string name = 1 [
        (google.api.resource_reference).child_type = "testdata.validate/Field"
    ];
}

message FieldReferenceTypeAndChild {
    string name = 1 [
        (google.api.resource_reference) = {
            type: "testdata.validate/Field"
            child_type: "testdata.validate/Field"
        }
    ];
}

message FieldRepeatedReferenceType {
    repeated string name = 1 [
        (google.api.resource_reference).type = "testdata.validate/Field"
    ];
}

message FieldOptions {
    string name = 1 [(cel.validate.field).rule = {
        programs: {
            expr: 'name != emptyName'
        }
    }];
}

message FieldLocalOptions {
    string name = 1 [(cel.validate.field).rule = {
        options: {
            globals: {
                constants: [{
                    key: "emptyName"
                    value: ""
                }]
            }
        }
        programs: {
            expr: 'name != ""'
        }
    }];
}
